fix Bug #46147: after stream seek, appending stream filter reads incorrect data